[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameNarrativeDisplay/ShowGamepadHint.gd" type="Script" id=1]
[ext_resource path="res://scripts/dynamic_gamepad_icon.gd" type="Script" id=2]
[ext_resource path="res://sprites/GamepadGlyphs/dpad/left-right.png" type="Texture" id=3]
[ext_resource path="res://sprites/GamepadGlyphs/Steam/A.png" type="Texture" id=4]

[node name="GamepadHint" type="HBoxContainer"]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 512.0
margin_top = 448.0
margin_right = 768.0
margin_bottom = 472.0
rect_min_size = Vector2( 0, 24 )
custom_constants/separation = 5
alignment = 1
script = ExtResource( 1 )

[node name="dpad_icon" type="TextureRect" parent="."]
margin_left = 40.0
margin_right = 60.0
margin_bottom = 24.0
texture = ExtResource( 3 )
script = ExtResource( 2 )
GamepadButton = 6

[node name="Label" type="Label" parent="."]
margin_left = 65.0
margin_top = 5.0
margin_right = 142.0
margin_bottom = 19.0
text = "NAVIGATE +"

[node name="ui_accept_icon" type="TextureRect" parent="."]
margin_left = 147.0
margin_right = 167.0
margin_bottom = 24.0
texture = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Label2" type="Label" parent="."]
margin_left = 172.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 19.0
text = "SELECT"
